--- a/WebAPI/wwwroot/style.css
+++ b/WebAPI/wwwroot/style.css
@@ -1,13 +1,246 @@
+body
+{
+    padding: 0;
+    margin: 0;
+    background: lightblue;
+}
+
 .Chat
 {
+    width: 100%;
+    height: 100vh;
     display: grid;
     grid-template-rows: 10fr 1fr;
 }
 .Chat__MessageList
 {
     grid-row:1;
+    padding-top: 2vh;
+    padding-bottom: 0;
 }
 .Chat__MessageInpute
 {
+    max-width: 100%;
+    
     grid-row:2;
+
+    padding: 0 2vw;
+    display: flex;
+    justify-content: stretch;
+    align-items: flex-end;
+}
+
+.Chat__MessageInpute__Controlls
+{
+
+    max-height: 5vh;
+    min-height: 50px;
+    height: 5vh;
+
+    max-width: 95vw;
+    width: calc(100vw - 4vw - 40px);
+    min-width: 200px;
+    background-color: lightsteelblue;
+    padding: 10px 15px;
+    border-radius: 5px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+
+    display: grid;
+    grid-template-columns: 12fr 1fr;
+
+    
+    gap: 10px;
+}
+
+.Chat__MessageInpute__Controlls__TextController
+{
+    grid-column: 1;
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: 10fr 1fr;
+    grid-gap: 5px;
+}
+.Chat__MessageInpute__Controlls__FileControll
+{
+    grid-column: 2;
+
+    width: 25px;
+    height: 25px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    flex-wrap: nowrap;
+
+}
+
+.Chat__MessageInpute__Controlls__FileControll .SendFileInput
+{
+    width: 30px;
+    height: 30px;
+    
+    background-image: image("./File.png");
+    background-clip: content-box;
+
+    border-radius: 2px;
+    padding: 4px;
+    cursor: pointer;
+
+    content: none;
+}
+
+button
+{
+    padding: 0;
+    border: 0;
+}
+
+.input-file {
+	position: relative;
+	display: inline-block;
+}
+.input-file-btn {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	border-radius: 4px;
+	padding: 4px 4px;
+	box-sizing: border-box;
+	border: none;
+	margin: 0;
+	transition: background-color 0.2s;
+}
+
+.input-file input[type=file] {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+	display: block;
+	width: 0;
+	height: 0;
+}
+ 
+/* Focus */
+.input-file input[type=file]:focus + .input-file-btn {
+	box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+ 
+/* Hover/active */
+.input-file:hover .input-file-btn {
+	background-color: palevioletred;
+}
+.input-file:active .input-file-btn {
+	background-color: #2E703A;
+}
+ 
+/* Disabled */
+.input-file input[type=file]:disabled + .input-file-btn {
+	background-color: #eee;
+}
+
+img
+{
+    object-fit: contain; width: 100%; height: 100%;
+}
+
+.Chat__MessageList
+{
+    background: lightblue;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    gap: 1vh 0;
+    justify-content: flex-start;
+}
+
+.Chat__MessageList__Item
+{
+    padding: 15px 20px;
+    max-width: 500px;
+    width: 15vw;
+    min-width: 200px;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.Chat__MessageList__Line
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.Chat__MessageList__Item--My
+{
+    border-radius: 0 15px 15px 0;
+    background-color: #59be6e;
+}
+.Chat__MessageList__Item--AnoutherUser
+{
+
+    border-radius: 15px 0 0 15px;
+    background-color: lightskyblue;
+}
+
+.Chat__MessageList__Line:has(> .Chat__MessageList__Item--My)
+{
+    justify-content: flex-start;
+}
+
+.Chat__MessageList__Line:has(> .Chat__MessageList__Item--AnoutherUser)
+{
+    justify-content: flex-end;
+}
+
+.UserName
+{
+    font-weight: 900;
+    font-size: 1.3em;
+}
+
+.Chat__MessageList__Line:has(.FileMessage)
+{
+    cursor: pointer;
+}
+
+.Chat__MessageList__Line:has(.FileMessage) .Chat__MessageList__Item
+{
+    transition: background-color 0.3s ease-in-out;
+}
+
+.Chat__MessageList__Line:has(.FileMessage):hover .Chat__MessageList__Item.Chat__MessageList__Item--AnoutherUser
+{
+    background-color: blanchedalmond;
+}
+
+.Chat__MessageList__Line:has(.FileMessage):hover .Chat__MessageList__Item.Chat__MessageList__Item--My
+{
+    background-color: greenyellow;
+}
+
+.FileMessage
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.FileMessage .FileDownload
+{
+    content: none;
+    background-image: url("./File.png");
+    background-clip: content-box;
+    width: 15px;
+    height: 15px;
 }
